--- a/index.html
+++ b/index.html
@@ -388,8 +388,8 @@
   <p>هذا هو نص المقال التجريبي الذي يحتوي على حوالي 100 كلمة. يمكن استبدال هذا النص بالمحتوى الحقيقي للمقال. الهدف هنا هو توفير تصميم عصري ومتجاوب مع مكان للإعلانات وسط المقالة.</p>
   
    <!-- زر الطابعة الجديد تحت الفقرة الأولى -->
-  <span class="article-printer-btn" id="articlePrinterBtn" title="طباعة">🖨️</span>
-  
+  <!-- زر الطابعة الجديد مع النص تحت الفقرة الأولى -->
+  <span class="article-printer-btn" id="articlePrinterBtn" title="طباعة">🖨️ <span>اطبع المقالة</span></span>
   
   <p>هذا هو نص المقال التجريبي الذي يحتوي على حوالي 100 كلمة. يمكن استبدال هذا النص بالمحتوى الحقيقي للمقال. الهدف هنا هو توفير تصميم عصري ومتجاوب مع مكان للإعلانات وسط المقالة.</p>
   <p>هذا هو نص المقال التجريبي الذي يحتوي على حوالي 100 كلمة. يمكن استبدال هذا النص بالمحتوى الحقيقي للمقال. الهدف هنا هو توفير تصميم عصري ومتجاوب مع مكان للإعلانات وسط المقالة.</p>
